# xapian-python-bindings-1.4.25

./: CMakeLists.txt  README.md  README_gehatzip.txt  xapian_wrap.cc  xapian_wrap.h
xapian/: __init__.py
